--- a/src/app/ICS/ics-settings/ics-customheaderfield/ics-customheaderfield.component.html
+++ b/src/app/ICS/ics-settings/ics-customheaderfield/ics-customheaderfield.component.html
@@ -1,1 +1,35 @@
-<p>ics-customheaderfield works!</p>
+
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+          <div class="c_header">
+            <h4>Custom Header</h4>
+                            </div>
+            <div class="card-body">
+
+                    <form class="form-vertical">
+                            <div class="card-body">
+
+                                    <div class="form-group row">
+                                            <label for="FieldName" class="col-sm-2 control-label col-form-label">Field Name:</label>
+                                        </div>
+                                        <input type="text" class="form_control" id="FieldName" placeholder="">
+                                            
+                                        <div class="form-group row">
+                                                <label for="AddTaskList" class="col-sm-2 control-label col-form-label">Add Task List:</label>
+                                            </div>
+                                           <textarea class="form_control" id="AddTaskList" placeholder=""></textarea>
+                                            <br>
+                                            <div class="form-group row">
+                                                              <button type="submit" class="btn btn-cyan" >  
+                                                                    <i class="ti-plus"></i>   Add </button>
+                                                            <button type="button" class="btn btn-cyan"> <i class="ti-pencil"></i> Edit</button>
+                                                     </div>    
+                                            
+                            </div>
+                        </form>
+
+
+                </div>
+        </div></div></div>
