--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -87,6 +87,25 @@
           </div>
       </div>
   </div>
+
+  <div class="col-sm-12 col-md-5">
+    <div class="card bg-cyan">
+        <div class="card-body text-white">
+            <div class="d-flex flex-row">
+                <div class="display-6 align-self-center">
+                    <i class="ti-settings"></i>
+                </div>
+                <div class="p-10 align-self-center">
+                    <h4 class="m-b-0">Administration</h4>
+                    <!-- <span>pending</span> -->
+                </div>
+                <!-- <div class="ml-auto align-self-center">
+                    <h2 class="font-medium m-b-0">6540</h2>
+                </div> -->
+            </div>
+        </div>
+    </div>
+</div>
   <!-- Column -->
 </div>
 </div>
