--- a/src/app/EQS/eqs-dashboard/eqs-dashboard.component.html
+++ b/src/app/EQS/eqs-dashboard/eqs-dashboard.component.html
@@ -1,15 +1,19 @@
 <div class="row">
   <div class="col-lg-12">
       <div class="card">
+          <div class="c_header">
+              <h4>Equipment Report</h4>
+                              </div>
           <div class="card-body">
             <div class="d-flex no-block align-items-center">
-              <h4 class="card-title">Equipment Report</h4>
+              <!-- <h4 class="card-title">Equipment Report</h4> -->
           </div>
 
-          <hr>
-
-          <button ejs-dropdownbutton [items]='items' content='Eqp List' style="color: rgba(54, 32, 252, 0.822);"></button>
-          <button ejs-dropdownbutton [items]='items1' content='Parameter List' style="color: rgba(54, 32, 252, 0.822);"></button>
+          
+          <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Equipment List' ></button>
+          <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Parameter List'></button>
+          <!-- <button ejs-dropdownbutton [items]='items' content='Eqp List' style="color: rgba(54, 32, 252, 0.822);"></button>
+          <button ejs-dropdownbutton [items]='items1' content='Parameter List' style="color: rgba(54, 32, 252, 0.822);"></button> -->
           <hr>
 
           <div class="row">
