--- a/src/app/EQS/eqs-qualification/eqs-qualification.component.html
+++ b/src/app/EQS/eqs-qualification/eqs-qualification.component.html
@@ -1,88 +1,134 @@
 <div class="row">
-  <div class="col-lg-12">
-      <div class="card">
-          <div class="card-body">
+    <div class="col-lg-12">
+        <div class="card">
+          <div class="c_header">
+            <h4>Qualification</h4>
+                            </div>
+            <div class="card-body">
+              <!-- <div class="d-flex no-block align-items-center">
+                <h4 class="card-title"></h4>
+              </div>
+            
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Equipment Id'></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Equipment Name'></button> -->
+            <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
+            <!-- <button  class="btn-btn-info mr-2 float-right btn_style"><i class="ti-export"></i> Export</button>
+            <button  class="btn-btn-info mr-2 float-right btn_style" (click)="openAddQualificationModal(qualificationModal)"><i class="fas fa-plus-circle"></i>Add Qualification</button>
+            <hr> -->
             <div class="d-flex no-block align-items-center">
-              <h4 class="card-title">Qualification</h4>
-            </div>
-          <hr>
-          <button class="mr-2" ejs-dropdownbutton [items]='items' content='Eqp Id' style="color: rgba(54, 32, 252, 0.822);"></button>
-          <button class="mr-2" ejs-dropdownbutton [items]='items1' content='Eqp Name' style="color: rgba(54, 32, 252, 0.822);"></button>
-          <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
-          <button  class="btn-btn-info mr-2 float-right" style="color: rgba(54, 32, 252, 0.822);"><i class="ti-export"></i> Export</button>
-          <button  class="btn-btn-info mr-2 float-right" (click)="openAddQualificationModal(qualificationModal)" style="color: rgba(54, 32, 252, 0.822);"><i class="fas fa-plus-circle"></i>Add Qualification</button>
-          <hr>
-          <div class="table-responsive">
-              <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
-                  <e-columns>
-                <e-column field='Sr No' headerText='Sr No' textAlign='Right' width=90></e-column>
-                <e-column field='Eqp Id' headerText='Eqp Id' width=150></e-column>
-                <e-column field='Eqp Name' headerText='Eqp Name' textAlign='Right' format='C2' width=150></e-column>
-                <e-column field='Last Perform Date' headerText='Last Perform Date' textAlign='Right' format='yMd' width=200></e-column>
-                <e-column field='Next Due Date' headerText='Next Due Date' textAlign='Right' width=170></e-column>
-                <e-column field='Date Of Qualification' headerText='Date Of Qualification' textAlign='Right' width=170></e-column>
-                <e-column field='Type Of Qualification' headerText='Type Of Qualification' width=170></e-column>
-                <e-column field='Attachment' headerText='Attachment' textAlign='Right' format='C2' width=150></e-column>
-                <e-column field='Notes' headerText='Notes' textAlign='Right' format='yMd' width=120></e-column>
-                <e-column field='Edit' headerText='Edit' textAlign='Right' width=90></e-column>
-              </e-columns>
-                </ejs-grid>
+              <h4 class="card-title"> </h4>
+              <div class="ml-auto mb-2">
+                  <button  class="btn-btn-info mr-2 float-right btn_style"><i class="ti-export"></i> Export</button>
+                  <button class="btn-btn-info mr-2 float-right btn_style" (click)="openAddQualificationModal(qualificationModal)"><i class="fas fa-plus-circle"></i>Add Qualification</button>
+                 
+              </div>
           </div>
-          </div>
-      </div>
-  </div>
-</div>
-
-<ng-template #qualificationModal let-modal>
-
-<div class="modal-header">
-  <h4 class="modal-title">Add Qualification</h4>
-  <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-
-<div class="modal-body">
-  <div class="form-group row">
-      <label for="fname" class="col-sm-2 control-label col-form-label">Equipment Name : </label>
-      <div class="col-sm-4">
-          <input type="text" class="form-control" id="parameter" placeholder="">
-      </div>
-      <label for="fname" class="col-sm-3 control-label col-form-label ml-auto offset-1 p-l-40">Qualification Type :</label>
-      <div class="col-sm-2 m-0 p-0">
-        <button ejs-dropdownbutton [items]='items2' content='IQ' style="color: rgba(54, 32, 252, 0.822);"></button>
-      </div>
-</div>
-  <hr color="black">
-  <form class="form-horizontal">
-    <div class="card-body border">
-        <div class="form-group row">
-            <label for="fname" class="col-sm-3 control-label col-form-label">Date of Qualification :</label>
-            <div class="col-sm-3">
-                <!-- <input type="text" class="form-control" id="parameter" placeholder=""> -->
-                <ejs-datepicker [value]='dateValue' placeholder='Enter date'></ejs-datepicker>
+            <div class="table-responsive">
+                <ejs-grid [dataSource]='data' [allowSelection]='true'allowFiltering='true' [filterSettings]='filterOptions'[gridLines]="lines"  [enableHover]='false'  [allowSorting]='true' e-gridheader=''height='350px'>
+                    <e-columns>
+                      <e-column  headerText='Action'textAlign='center' width='100'>
+                        <ng-template #template let-data>
+                            <div class="loc">
+                              <button cssClass='small'  ejs-button (click)="editQualification()">  <span class="e-icons e-edit"></span></button>
+                            </div>
+                        </ng-template>
+                    </e-column>
+                    <e-column field='SrNo' headerText='Sr. No.' textAlign='center' width=120></e-column>
+                    <e-column field='EquipmentId' headerText='Equipment Id' textAlign='center' width=180></e-column>
+                    <e-column field='EquipmentName' headerText='Equipment Name' textAlign='center' format='C2' width=180></e-column>
+                    <!-- <e-column field='LastPerformedDate' headerText='Last Performed Date' textAlign='Left' format='yMd' width=200></e-column> -->
+                    <!-- <e-column field='NextDueDate' headerText='Next Due Date' textAlign='Left' width=170></e-column> -->
+                    <e-column field='DateOfQualification' headerText='Date of Qualification' textAlign='center' width=190></e-column>
+                    <e-column field='TypeOfQualification' headerText='Type of Qualification' textAlign='center' width=200></e-column>
+                  <!-- <e-column field='Attachment' headerText='Attachment' textAlign='Left' format='C2' width=120></e-column> -->
+                  <e-column  headerText='Attachment' textAlign='center' width='150'>
+                    <ng-template #template let-data>
+                        <div class="loc">
+                        <button cssClass='small'  ejs-button (click)="editQualification()">  <span><img src="assets/images/openfolder.png"  class="dark-logo openFolder" /></span></button>
+                        </div>
+                    </ng-template>
+                </e-column>
+                  <e-column field='PerformedBy' headerText='Performed By' textAlign='center' width=170></e-column>
+                  <e-column field='Description' headerText='Description' textAlign='center' format='yMd' width=150></e-column>
+                  <!-- <e-column field='Edit' headerText='Edit' textAlign='Left' width=50></e-column> -->
+                </e-columns>
+                  </ejs-grid>
             </div>
-        </div>
-        <div class="form-group row">
-            <label for="lname" class="col-sm-3 control-label col-form-label">Note :</label>
-            <div class="col-sm-9">
-                <textarea class="form-control cye-lf-tag" rows="5"></textarea>
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="email1" class="col-sm-3 control-label col-form-label">Attachment :</label>
-            <div class="col-sm-9">
-              <ejs-uploader #defaultupload [autoUpload]='false' [dropArea]='dropEle' [asyncSettings]='path' (success)="onUploadSuccess($event)" (failure)="onUploadFailure($event)"></ejs-uploader>
-                <small class="form-text text-danger">* multiple attachment</small>
             </div>
         </div>
     </div>
-  </form>
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-info waves-effect waves-light">Add</button>
-  <button type="button" class="btn btn-info waves-effect waves-light" (click)="modal.close('Close click')">Cancel</button>
-</div>
+  </div>
+
+<ng-template #qualificationModal let-modal>
+
+  <div class="modal_header">
+    <h6 class="modal-title">Add Qualification</h6>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <div class="form-group row">
+        <label for="EquipmentId" class="col-sm-2 control-label col-form-label">Equipment ID:</label>
+        <div class="col-sm-4">
+          <ejs-combobox id='EquipmentId' [dataSource]='data3' [fields]='fields' (filtering)='onFiltering($event)' [popupHeight]='height' [allowFiltering]='true'
+          [placeholder]='watermark'></ejs-combobox>
+        </div>
+        <label for="EquipmentName" class="col-sm-2 control-label col-form-label">Equipment Name:</label>
+        <div class="col-sm-4">
+          <ejs-combobox id='EquipmentName' [dataSource]='data3' [fields]='fields' (filtering)='onFiltering($event)' [popupHeight]='height' [allowFiltering]='true'
+          [placeholder]='watermark'></ejs-combobox>
+        </div>
+    </div>
+    <div class="form-group row">
+        <!-- <label for="EquipmentName" class="col-sm-2 control-label col-form-label">Equipment Name : </label>
+        <div class="col-sm-4">
+            <input type="text" class="form-control" id="EquipmentName" placeholder="">
+        </div> -->
+        <label for="Qtype" class="col-sm-4 control-label col-form-label ml-auto offset-1 p-l-40">Qualification Type :</label>
+        <div class="col-sm-2 m-0 p-0 dropdown_style">
+          <button ejs-dropdownbutton [items]='items2' content='Select'></button>
+        </div>
+        <label for="PerformedBy" class="col-sm-4 control-label col-form-label ml-auto offset-1 p-l-40">Performed By :</label>
+        <div class="col-sm-2 m-0 p-0 dropdown_style">
+          <!-- <button ejs-dropdownbutton [items]='items3' content='Select'></button> -->
+          <input type="text" class="form-control" id="PerformedBy" placeholder="">
+        </div>
+  </div>
+    <hr color="black">
+    <form class="form-horizontal">
+      <div class="card-body border">
+          <div class="form-group row">
+              <label for="DateOfQualification" class="col-sm-5 control-label col-form-label">Date of Qualification :</label>
+              <div class="col-sm-3">
+                  <!-- <input type="text" class="form-control" id="parameter" placeholder=""> -->
+                  <ejs-datepicker [value]='dateValue' placeholder='Enter date'></ejs-datepicker>
+              </div>
+          </div>
+          <div class="form-group row">
+              <label for="Description" class="col-sm-3 control-label col-form-label">Description :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="Description" placeholder="">
+                  <!-- <textarea class="form-control cye-lf-tag" rows="5"></textarea> -->
+              </div>
+          </div>
+          <div class="form-group row">
+              <label for="Attachment" class="col-sm-3 control-label col-form-label">Attachment :</label>
+              <div class="col-sm-9">
+                 <ejs-uploader #defaultupload [autoUpload]='false' [dropArea]='dropEle' [asyncSettings]='path' (success)="onUploadSuccess($event)" (failure)="onUploadFailure($event)"></ejs-uploader>
+                  <small class="form-text text-cyan">* multiple attachment</small>  
+                  <!-- <ejs-filemanager id='file-manager' [ajaxSettings]='ajaxSettings' [view]='view' (created)='onCreate($event)'>
+                  </ejs-filemanager> -->
+              </div>
+          </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-btn-info btn_style">Add</button>
+    <button class="btn-btn-info btn_style"(click)="modal.close('Close click')">Cancel</button>
+  </div>
 </ng-template>
 
 
