--- a/src/app/EQS/eqs-reports/equipment-list/equipment-list.component.html
+++ b/src/app/EQS/eqs-reports/equipment-list/equipment-list.component.html
@@ -1,25 +1,28 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
+            <div class="c_header">
+                <h4>List Of Equipment</h4>
+                                </div>
             <div class="card-body">
               <div class="d-flex no-block align-items-center">
-                <h4 class="card-title">List of Equipments</h4>
+                <!-- <h4 class="card-title">List of Equipments</h4> -->
               </div>
-            <hr>
+            
             <label class="">Equipment Name: </label>
-            <button class="mr-2 ml-2" ejs-dropdownbutton [items]='items' content='Select' style="color: rgba(54, 32, 252, 0.822);"></button>
-            <button  class="btn-btn-info mr-2 float-right" style="color: rgba(54, 32, 252, 0.822);"><i class="ti-export"></i> Export</button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Select'></button>
+            <button  class="btn-btn-info mr-2 float-right dropdown_style" ><i class="ti-export"></i> Export</button>
             <hr>
             <div class="table-responsive">
-                <ejs-grid [dataSource]='data' [allowSelection]='true'  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
+                <ejs-grid [dataSource]='data' [allowSelection]='true'allowFiltering='true'[filterSettings]='filterOptions' [gridLines]="lines"  [enableHover]='false'  [allowSorting]='true' e-gridheader=''height='350px'>
                     <e-columns>
-                  <e-column field='Sr No' headerText='Sr No' textAlign='Right' width=90></e-column>
-                  <e-column field='EquipmentId' headerText='Equipment Id' width=150></e-column>
-                  <e-column field='FrequencyOfCalibration' headerText='Frequency Of Calibration ' textAlign='Right' format='C2' width=200></e-column>
-                  <e-column field='StartDate' headerText='Start Date' textAlign='Right' format='yMd' width=200></e-column>
-                  <e-column field='EndDate' headerText='End Date' textAlign='Right' format='yMd' width=200></e-column>
-                  <e-column field='DueDate' headerText='Due Date' textAlign='Right' format='yMd' width=200></e-column>
-                  <e-column field='Purpose' headerText='Purpose' textAlign='Right' width=170></e-column>
+                  <e-column field='Sr No' headerText='Sr. No.' textAlign='center' width=120></e-column>
+                  <e-column field='EquipmentId' headerText='Equipment Id' textAlign='align-items-center' width=180></e-column>
+                  <e-column field='FrequencyOfCalibration' headerText='Frequency of Calibration ' textAlign='center' format='C2' width=220></e-column>
+                  <e-column field='StartDate' headerText='Start Date' textAlign='center' format='yMd' width=200></e-column>
+                  <e-column field='EndDate' headerText='End Date' textAlign='center' format='yMd' width=200></e-column>
+                  <e-column field='DueDate' headerText='Due Date' textAlign='center' format='yMd' width=200></e-column>
+                  <e-column field='Purpose' headerText='Purpose' textAlign='center' width=170></e-column>
                 </e-columns>
                   </ejs-grid>
             </div>
