--- a/src/app/ICS/ics-maintenance/ics-maintenance.component.html
+++ b/src/app/ICS/ics-maintenance/ics-maintenance.component.html
@@ -2,47 +2,54 @@
     <div class="col-lg-12">
         <div class="card">
           <div class="c_header">
-            <h4>Maintainence</h4>
+            <h4>Maintenance</h4>
                             </div>
             <div class="card-body">
-              <div class="d-flex no-block align-items-center">
+              <!-- <div class="d-flex no-block align-items-center">
                 <h4 class="card-title"></h4>
             </div>
   
             
   
             <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items' content='Instrument Id'></button>
-            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Instrument Name'></button>
+            <button class="mr-2 dropdown_style" ejs-dropdownbutton [items]='items1' content='Instrument Name'></button> -->
             <!-- <a class="btn btn-warn" >  <i class="fas fa-plus-circle" style="color: cadetblue;"></i> Add Parameter</a> -->
-            <button  class="btn-btn-info mr-2 float-right btn_style"><i class="ti-export"></i> Export</button>
+            <!-- <button  class="btn-btn-info mr-2 float-right btn_style"><i class="ti-export"></i> Export</button>
             <button class="btn-btn-info mr-2 float-right btn_style" (click)="adddetails(content3)"><i class="fas fa-plus-circle"></i>Add Details</button>
-           <hr>
+            <hr> -->
+            <div class="d-flex no-block align-items-center">
+                <h4 class="card-title"> </h4>
+                <div class="ml-auto mb-2">
+                    <button  class="btn-btn-info mr-2 float-right btn_style"><i class="ti-export"></i> Export</button>
+                    <button class="btn-btn-info mr-2 float-right btn_style" (click)="adddetails(content3)"><i class="fas fa-plus-circle"></i>Add Details</button>
+                   
+                </div>
+            </div>
             <div class="table-responsive">
-              <ejs-grid [dataSource]='data' [allowSelection]='true' [gridLines]="lines"  [enableHover]='false'  [allowSorting]='true' e-gridheader=''>
+              <ejs-grid [dataSource]='data' [allowSelection]='true' allowFiltering='true' [filterSettings]='filterOptions'[gridLines]="lines"  [enableHover]='false'  [allowSorting]='true' e-gridheader=''height='350px'>
                   <e-columns>
-                    <e-column  headerText='Action' width='100'>
+                    <e-column  headerText='Action' textAlign='center' width='100'>
                       <ng-template #template let-data>
                           <div class="loc">
                             <button cssClass='small'  ejs-button (click)="editMainteinance()">  <span class="e-icons e-edit"></span></button>
                           </div>
                       </ng-template>
                   </e-column>
-                <e-column field='SrNo' headerText='Sr No' textAlign='Left' width=90></e-column>
-                <e-column field='InstId' headerText='Inst Id' width=150></e-column>
-                <e-column field='InstName' headerText='Inst Name' textAlign='Left' format='C2' width=150></e-column>
-                <e-column field='TypeOfAction' headerText='Type Of Action' textAlign='Left' width=170></e-column>
-                <e-column field='PerformedDate' headerText='Performed Date' textAlign='Left' format='yMd' width=200></e-column>
-                <e-column field='NextDueDate' headerText='Next Due Date' textAlign='Left' width=170></e-column>
-                <!-- <e-column field='Attachment' headerText='Attachment' textAlign='Left' format='C2' width=150></e-column> -->
-                <e-column  headerText='Attachment' width='150'>
+                <e-column field='SrNo' headerText='Sr. No.' textAlign='center' width=120></e-column>
+                <e-column field='InstId' headerText='Instrument Id' textAlign='center' width=180></e-column>
+                <e-column field='InstName' headerText='Instrument Name' textAlign='center' format='C2' width=180></e-column>
+                <e-column field='TypeOfAction' headerText='Type of Action' textAlign='center' width=180></e-column>
+                <e-column field='DueDate' headerText='Due Date' textAlign='center' format='yMd' width=200></e-column>
+                <e-column field='PerformedDate' headerText='Performed Date' textAlign='center' format='yMd' width=180></e-column>
+                <e-column field='NextDueDate' headerText='Next Due Date' textAlign='center' width=180></e-column>
+                <e-column  headerText='Attachment' textAlign='center' width='150'>
                   <ng-template #template let-data>
                       <div class="loc">
                       <button cssClass='small'  ejs-button (click)="editMainteinance()">  <span><img src="assets/images/openfolder.png"  class="dark-logo openFolder" /></span></button>
                       </div>
                   </ng-template>
               </e-column>
-                <e-column field='Notes' headerText='Notes' textAlign='Left' format='yMd' width=120></e-column>
-                <!-- <e-column field='Edit' headerText='Edit' textAlign='Left' width=90></e-column> -->
+                <e-column field='Notes' headerText='Notes' textAlign='center' format='yMd' width=120></e-column>
               </e-columns>
                 </ejs-grid>
     </div>
@@ -64,42 +71,120 @@
   </div>
 
   <div class="modal-body">
-    <div class="form-group row">
-        <label for="fname" class="col-sm-2 control-label col-form-label">Instrument Name </label>
+    <!-- <div class="form-group row">
+        <label for="InstName" class="col-sm-2 control-label col-form-label">Instrument Name </label>
         <div class="col-sm-4">
-            <input type="text" class="form-control" id="parameter" placeholder="">
+            <input type="text" class="form-control" id="InstName" placeholder="">
         </div>
-        <label for="fname" class="col-sm-3 control-label col-form-label ml-auto offset-1 p-l-40"> Type :</label>
+        <label for="Type" class="col-sm-3 control-label col-form-label ml-auto offset-1 p-l-40"> Type :</label>
         <div class="col-sm-2 m-0 p-0 dropdown_style">
           <button ejs-dropdownbutton [items]='items2' content='Action'></button>
         </div>
+  </div> -->
+  <div class="row">
+      <div class="col-md-12">
+        <div class="row">
+        <div class="col-md-4">
+          <div class="form-group">
+       <label for="InstId" class="control-label col-form-label">Instrument ID:</label>
+       <ejs-combobox id='InstId' [dataSource]='data3' [fields]='fields' (filtering)='onFiltering($event)' [popupHeight]='height' [allowFiltering]='true'
+        [placeholder]='watermark'></ejs-combobox>
+       
+       </div></div>
+       <div class="col-md-4">
+           <div class="form-group">
+        <label for="InstName" class="control-label col-form-label">Instrument Name:</label>
+        
+        <ejs-combobox id='InstName' [dataSource]='data3' [fields]='fields' (filtering)='onFiltering($event)' [popupHeight]='height' [allowFiltering]='true'
+        [placeholder]='watermark'></ejs-combobox>
+        </div></div>
+       
+        <div class="col-md-4">
+           <div class="form-group">
+       
+              <label for="Type" class="control-label col-form-label ml-auto offset-1 p-l-40"> Maintenance Type:</label>
+              <ejs-combobox id='Type' [dataSource]='data4' [fields]='fields' (filtering)='onFiltering($event)' [popupHeight]='height' [allowFiltering]='true'
+        [placeholder]='watermark'></ejs-combobox>
+       
+          <!-- <button ejs-dropdownbutton [items]='items2' content='Action'></button> -->
+        </div></div>
+       
+ </div> </div></div>
+    <hr>
+
+
+<div class="row">
+  <div class="col-sm-12">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+      <label for="PerformanceDate" class="control-label col-form-label">Performance Date:</label>
+    
+           </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="form-group"style="width: 40%;">
+               <ejs-datepicker [value]='dateValue' placeholder='Enter date'></ejs-datepicker>
+               </div>
+            </div>
+     </div>
   </div>
-    <hr color="black">
-    <form class="form-horizontal">
-      <div class="card-body border">
-          <div class="form-group row">
-              <label for="fname" class="col-sm-4 control-label col-form-label">Performance Date :</label>
-              <div class="col-sm-3">
-                  <!-- <input type="text" class="form-control" id="parameter" placeholder=""> -->
-                  <ejs-datepicker [value]='dateValue' placeholder='Enter date'></ejs-datepicker>
-              </div>
-          </div> 
-          <div class="form-group row">
-              <label for="lname" class="col-sm-3 control-label col-form-label">Note :</label>
-              <div class="col-sm-9">
-                <input type="text" class="form-control" id="parameter" placeholder="">
-                  <!-- <textarea class="form-control cye-lf-tag" rows="5"></textarea> -->
-              </div>
+</div>
+<div class="row">
+    <div class="col-sm-12">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="form-group">
+              <label for="Attachment" class=" control-label col-form-label">Attachment:</label>
+      
+             </div>
           </div>
-          <div class="form-group row">
-              <label for="email1" class="col-sm-3 control-label col-form-label">Attachment :</label>
-              <div class="col-sm-9">
-                <ejs-uploader #defaultupload [autoUpload]='false' [dropArea]='dropEle' [asyncSettings]='path' (success)="onUploadSuccess($event)" (failure)="onUploadFailure($event)"></ejs-uploader>
+          <div class="col-sm-6">
+              <div class="form-group"style="width: 90%;">
+                  <ejs-uploader #defaultupload [autoUpload]='false' [dropArea]='dropEle' [asyncSettings]='path' (success)="onUploadSuccess($event)" (failure)="onUploadFailure($event)"></ejs-uploader>
                   <small class="form-text text-cyan">* multiple attachment</small>
+                 </div>
               </div>
-          </div>
+       </div>
+    </div>
+  </div>
+
+  
+  <div class="row">
+      <div class="col-sm-12">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="form-group">
+                <label for="Description" class="control-label col-form-label">Description:</label>
+        
+               </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <!-- <input type="text" class="form-control" id="Description" placeholder="">  -->
+                  <textarea name="message" rows="5" cols="50">Aim </textarea> 
+                  <!-- <textarea class="form-control cye-lf-tag" rows="5"></textarea> -->
+                   </div>
+                </div>
+         </div>
       </div>
-    </form>
+    </div>
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </div>
   <div class="modal-footer">
     <button class="btn-btn-info btn_style">Add</button>
